
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#3857] Fix placeholder processing when output filters applied
- [#4362] Fix path issues with Static Resources and base_urls of /
- [#4074] Require list permission on Context for Resource searches
- [#4439] Do not allow invalid characters in username / password
- [#4485] Fix issue with scrolling on drag/drop Element Properties window in small resolutions
- [#4352] Fix failedlogincount / user blocking logic in login processor
- [#4373] Fix issue with htmltag TV output render and empty values
- [#4374] Fix issue with updating files in the edit file page
- [#4024] Fix issue with LocalProperty grids not rendering list type properties display values correctly
- [#4400] Trim whitespace from Namespace paths when adding/updating them
- [#4434] Fix issue with edit panel on contexts
- [#4372] Fix View button not getting URI change after Save Resource (all Resource types)
- [#4369] Ensure Save button is active after Template change on Weblink, Symlink, Static Resource
- [#4471] Set Resource alias properly on update
- [#4469] Guard against inadvertent creation of duplicate New Resources
- Add options to configure cache file writing attempts when exclusive locks fail
- [#4464] Prevent unnecessary TV queries on uncached Resources
- [#4422] Fix problems updating Boolean settings (System, Context, User)
- [#4453] Fix File Browser when paths contain "n_"
- [#4447] Fix ACL grid in Edit Context view
- [#4438] Fix error logging to custom log targets defined by array
- [#4399] Fix IE8 javascript error on Resource and Element update pages

MODX Revolution 2.1.0-rc-3 (April 11, 2011)
====================================
- Fix invalid merge retained in master branch from 2.1.0-rc-1
- Fix modResource::save() to refresh uri if isfolder field is dirty.

MODX Revolution 2.1.0-rc-2 (April 11, 2011)